--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -1,5 +1,6 @@
 site.listing: Listing
 site.home: Accueil
+site.last: Nouveautés
 site.profil: Profil
 site.login: Connexion
 site.logout: Déconnexion
@@ -7,8 +8,8 @@ site.username: Nom d'utilisateur
 site.password: Mot de passe
 site.admin: Administration
 couchpotato.index: Tous les films
-couchpotato.last: 100 Derniers films
+couchpotato.last100: 100 Derniers films
 sickbeard.index: Toutes les séries
-sickbeard.last: 100 Derniers épisodes
+sickbeard.last100: 100 Derniers épisodes
 sickbeard.season: Saison
 sickbeard.episode: Épisode
