--- a/app/locales/fr.yml
+++ b/app/locales/fr.yml
@@ -16,7 +16,7 @@ couchpotato.alreadywanted: Déjà demandé
 couchpotato.requestthismovie: Demander ce film
 couchpotato.searchmovie: Rechercher un film
 couchpotato.successfulladd: Le film a bien été ajouté.
-couchpotato.wanted: Films demandés
+couchpotato.wanted: Films en attente
 couchpotato.failadd: Une erreur est survenue lors de l'ajout du film.
 sickbeard.index: Toutes les séries
 sickbeard.last100: 100 Derniers épisodes
